--- a/demos/miniprogram.demo-block/assets/index.less
+++ b/demos/miniprogram.demo-block/assets/index.less
@@ -29,6 +29,8 @@
 
     &__button,
     > button {
+      min-width: 184px;
+      width: auto;
       margin: 0;
       margin-bottom: 10px;
     }
