--- a/packages/miniprogram.popup/assets/variables.less
+++ b/packages/miniprogram.popup/assets/variables.less
@@ -4,4 +4,4 @@
 // -----------------------------
 @popup-prefix-cls: ~'@{dora-prefix}-popup';
 @popup-z-index: var(--dora-popup-z-index, @component-z-index);
-@popup-background-color: @component-background;
+@popup-background-color: var(--dora-popup-background-color, @component-background);
