--- a/packages/miniprogram.list/src/item.wxml
+++ b/packages/miniprogram.list/src/item.wxml
@@ -25,6 +25,7 @@
   bindgetrealtimephonenumber="onGetRealtimePhoneNumber"
   bindagreeprivacyauthorization="onAgreePrivacyAuthorization"
   bindtap="onClick"
+  style="{{ containerStyle }}"
 >
   <view class="{{ classes.hd }}">
     <block wx:if="{{ thumb }}">
@@ -35,14 +36,27 @@
     </block>
   </view>
   <view class="{{ classes.bd }}">
-    <view wx:if="{{ title }}" class="{{ classes.text }}">{{ title }}</view>
-    <view wx:if="{{ label }}" class="{{ classes.desc }}">{{ label }}</view>
+    <view class="{{ classes.title }}">
+      <block wx:if="{{ title }}">{{ title }}</block>
+      <block wx:else>
+        <slot name="title"></slot>
+      </block>
+    </view>
     <slot></slot>
+    <view class="{{ classes.description }}">
+      <block wx:if="{{ label }}">{{ label }}</block>
+      <block wx:else>
+        <slot name="label"></slot>
+      </block>
+    </view>
   </view>
   <view class="{{ classes.ft }}">
     <block wx:if="{{ extra }}">{{ extra }}</block>
     <block wx:else>
       <slot name="footer"></slot>
     </block>
+    <view class="{{ classes.arrow }}" wx:if="{{ !isLink }}">
+      <slot name="arrow"></slot>
+    </view>
   </view>
 </button>
