--- a/packages/miniprogram.popup/playground/pages/index/index.wxml
+++ b/packages/miniprogram.popup/playground/pages/index/index.wxml
@@ -216,4 +216,20 @@
       </dora-popup>
     </block>
   </demo-block>
+  <demo-block title="CSS 变量">
+  <block>
+      <button bindtap="onOpen14">低部弹出</button>
+      <dora-popup
+        position="bottom"
+        wrapStyle="{{ wrapStyle }}"
+        bodyStyle="{{ { padding: '40px 20px 20px', minHeight: '40vh' } }}"
+        visible="{{ visible14 }}"
+        bind:close="onClose14"
+        bind:closed="onClosed14"
+      >
+        <view style="margin: 10px 0">弹窗的 `z-index` = 9999</view>
+        <view style="margin: 10px 0">弹窗的 `background-color` = #3880ff</view>
+      </dora-popup>
+    </block>
+  </demo-block>
 </demo-page>
