--- a/packages/miniprogram.list/miniprogram_dist/index.wxml
+++ b/packages/miniprogram.list/miniprogram_dist/index.wxml
@@ -1,6 +1,6 @@
-<view class="dora-class {{ classes.wrap }}">
+<view class="dora-class {{ classes.wrap }}" style="{{ containerStyle }}">
   <view class="{{ classes.hd }}" wx:if="{{ title }}">{{ title }}</view>
-  <view class="{{ classes.bd }}">
+  <view class="{{ classes.bd }}" style="{{ internalBodyStyle }}">
     <slot></slot>
   </view>
   <view class="{{ classes.ft }}" wx:if="{{ label }}">{{ label }}</view>
