--- a/demos/miniprogram.demo-block/assets/index.less
+++ b/demos/miniprogram.demo-block/assets/index.less
@@ -4,8 +4,8 @@
 // -----------------------------
 .@{demo-block-prefix-cls} {
   &__hd {
-    padding: 15px 15px 9px;
-    font-size: 14px;
+    padding: @spacing-xl @spacing-xl @spacing-base;
+    font-size: @font-size-base;
     color: rgba(var(--dora-text-color-rgb), .65);
     width: 100%;
     box-sizing: border-box;
@@ -17,7 +17,7 @@
     flex-direction: column;
     align-items: flex-start;
     background-color: var(--dora-background-color);
-    padding: 12px;
+    padding: @spacing-lg;
     box-sizing: border-box;
 
     &--bordered&::after {
@@ -27,15 +27,25 @@
       border-bottom-width: @border-width-base;
     }
 
-    &__button,
+    .@{demo-block-prefix-cls}__button,
     > button {
-      min-width: 184px;
-      width: auto;
-      margin: 0;
-      margin-bottom: 10px;
+      .button-reset();
+
+      background-color: @white !important;
+      color: @black !important;
+      min-width: calc((@spacing-lg * 1.5 * 3) + (@spacing-lg * 1.5 * 3) + @font-size-lg * 3);
+      min-height: 48px !important;
+      line-height: 48px;
+      border-radius: @border-radius-base;
+      font-size: @font-size-lg;
+      padding-left: @spacing-lg;
+      padding-right: @spacing-lg;
+      margin-bottom: @margin-component-xl;
+      text-align: center;
+      text-overflow: ellipsis;
     }
 
-    &__button:last-child,
+    .@{demo-block-prefix-cls}__button:last-child,
     > button:last-child {
       margin-bottom: 0;
     }
