--- a/packages/miniprogram.animation-group/playground/pages/assets/styles/polyfill.wxss
+++ b/packages/miniprogram.animation-group/playground/pages/assets/styles/polyfill.wxss
@@ -1,25 +1,43 @@
 @media (prefers-color-scheme: light) {
   page [data-dora-theme="auto"] button,
   page [data-dora-theme="light"] button {
-    background-color: #f8f8f8;
-    color: #000000;
+    background-color: #fff !important;
+    color: #000 !important;
+  }
+
+  page [data-dora-theme="auto"] button.button-hover,
+  page [data-dora-theme="light"] button.button-hover {
+    background-color: #e6e6e6 !important;
   }
 }
 
 page [data-dora-theme="light"] button {
-  background-color: #f8f8f8;
-  color: #000000;
+  background-color: #fff !important;
+  color: #000 !important;
+}
+
+page [data-dora-theme="light"] button.button-hover {
+  background-color: #e6e6e6 !important;
 }
 
 @media (prefers-color-scheme: dark) {
   page [data-dora-theme="auto"] button,
   page [data-dora-theme="dark"] button {
-    background-color: #343434;
-    color: #d6d6d6;
+    background-color: #343434 !important;
+    color: #d6d6d6 !important;
+  }
+
+  page [data-dora-theme="auto"] button.button-hover,
+  page [data-dora-theme="dark"] button.button-hover {
+    background-color: #191919 !important;
   }
 }
 
 page [data-dora-theme="dark"] button {
-  background-color: #343434;
-  color: #d6d6d6;
+  background-color: #343434 !important;
+  color: #d6d6d6 !important;
+}
+
+page [data-dora-theme="dark"] button.button-hover {
+  background-color: #191919 !important;
 }
