--- a/packages/miniprogram.backdrop/assets/index.less
+++ b/packages/miniprogram.backdrop/assets/index.less
@@ -19,4 +19,18 @@
   &--transparent {
     --background-color: transparent;
   }
+
+  &__bd {
+    z-index: 1;
+  }
+
+  &__aria-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
 }
