--- a/packages/miniprogram.backdrop/miniprogram_dist/index.wxss
+++ b/packages/miniprogram.backdrop/miniprogram_dist/index.wxss
@@ -18,3 +18,15 @@
 .dora-backdrop--transparent {
   --background-color: transparent
 }
+.dora-backdrop__bd {
+  z-index: 1
+}
+.dora-backdrop__aria-button {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none
+}
