--- a/packages/miniprogram.animation-group/miniprogram_dist/index.wxml
+++ b/packages/miniprogram.animation-group/miniprogram_dist/index.wxml
@@ -2,8 +2,8 @@
   class="dora-class dora-class-a dora-class-b dora-class-c {{ wrapCls }} {{ animateCss }}"
   bindtap="onClick"
   catchtouchmove="{{ disableScroll ? 'onTouchMove' : '' }}"
-  bindtransitionend="onTransitionEnd"
-  bindanimationend="onAnimationEnd"
+  bindtransitionend="{{ type === 'transition' ? 'onTransitionEnd' : '' }}"
+  bindanimationend="{{ type === 'animation' ? 'onAnimationEnd' : '' }}"
   style="{{ containerStyle }}"
   wx:if="{{ show }}"
 >
