--- a/packages/miniprogram.backdrop/miniprogram_dist/index.wxml
+++ b/packages/miniprogram.backdrop/miniprogram_dist/index.wxml
@@ -1,4 +1,5 @@
 <dora-animation-group
+  id="dora-animation-group"
   dora-class="{{ classes.wrap }}"
   in="{{ internalVisible }}"
   classNames="{{ classNames }}"
