--- a/packages/miniprogram.dialog/miniprogram_dist/index.wxss
+++ b/packages/miniprogram.dialog/miniprogram_dist/index.wxss
@@ -46,7 +46,7 @@
   display: -ms-flexbox;
   display: flex
 }
-.dora-dialog__ft:after {
+.dora-dialog__ft::after {
   content: " ";
   position: absolute;
   left: 0;
