--- a/packages/miniprogram.list/miniprogram_dist/item.wxss
+++ b/packages/miniprogram.list/miniprogram_dist/item.wxss
@@ -126,7 +126,7 @@
   position: relative
 }
 .dora-list-item--access > .dora-list-item__ft::after {
-  content: " ";
+  content: ' ';
   display: inline-block;
   width: 32rpx;
   height: 32rpx;
