--- a/packages/miniprogram.button/miniprogram_dist/index.wxss
+++ b/packages/miniprogram.button/miniprogram_dist/index.wxss
@@ -86,7 +86,7 @@
   transform-origin: 0 0
 }
 .dora-button::after {
-  content: " ";
+  content: ' ';
   width: 100%;
   height: 100%;
   position: absolute;
